[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/8x8_main_character/walk.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/8x8_main_character/idle.png" type="Texture" id=3]
[ext_resource path="res://themes/pixel.tres" type="Theme" id=4]
[ext_resource path="res://assets/8x8_main_character/jump.png" type="Texture" id=5]
[ext_resource path="res://player/PlayerWeapons.gd" type="Script" id=6]
[ext_resource path="res://player/CameraController.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/healthbar/healthbar1.png" type="Texture" id=9]
[ext_resource path="res://assets/healthbar/healthbar2.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 4
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.38901, 3.54546 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float white_progress : hint_range(0,1) = 0;

vec3 interpolate_vec3(vec3 start, vec3 end, float delta){
    return start + (end - start) * delta;
}

void fragment(){
    vec4 origin = texture(TEXTURE, UV);
    COLOR.rgb = interpolate_vec3(origin.rgb, vec3(1,1,1), white_progress);
    COLOR.a = origin.a;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/white_progress = 0.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "jump_up",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "jump_down",
"speed": 5.0
} ]

[sub_resource type="Animation" id=16]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Controlled" type="ColorRect" parent="."]
visible = false
margin_left = -3.0
margin_top = -4.0
margin_right = 3.0
margin_bottom = 4.0
color = Color( 0.501961, 1, 0.25098, 0.211765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayUsername" type="Label" parent="."]
margin_left = -18.6699
margin_top = -11.7534
margin_right = 18.3301
margin_bottom = -3.75334
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Anonymous"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.210461, 0.420925 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 4 )
frames = SubResource( 15 )
animation = "idle"

[node name="Weapons" type="Node2D" parent="AnimatedSprite"]
script = ExtResource( 6 )

[node name="WeaponSlot1" type="Node2D" parent="AnimatedSprite/Weapons"]

[node name="WeaponSlot2" type="Node2D" parent="AnimatedSprite/Weapons"]

[node name="Tween" type="Tween" parent="."]

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
smoothing_speed = 6.0
script = ExtResource( 7 )

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = -5.0
value = 30.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 16 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
